Added proper POST integration test; added POST example to MVC project; added POST example to readme

--- a/src/Example.Mvc/Views/Home/Index.cshtml
+++ b/src/Example.Mvc/Views/Home/Index.cshtml
@@ -6,6 +6,7 @@
 
 <ul>
     <li>@Html.ActionLink("Basic list example", "GitHubBasicList")</li>
+    <li>@Html.ActionLink("Update profile (POST) example", "GitHubUpdateProfile")</li>
     <li>@Html.ActionLink("Basic authentication", "GitHubBasicAuth")</li>
 </ul>
 
