Added .PrettyJson extension method and overload to .ToString() on Json that specifies whether or not to pretty the output

--- a/src/Example.Mvc/Views/Home/EnvatoBasicList.cshtml
+++ b/src/Example.Mvc/Views/Home/EnvatoBasicList.cshtml
@@ -13,3 +13,6 @@
     <li><a href="@f.url">@f.item</a> (@f.sales sales) for $@f.cost</li>
 }
 </ul>
+
+<h2>JSON Output</h2>
+<pre>@Model.ToString(true)</pre>
